--- a/.github/workflows/main-workflow_receiver.yml
+++ b/.github/workflows/main-workflow_receiver.yml
@@ -1,15 +1,15 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Build Run and Test
+name: Build Run and Test Receiver
 
 on:
   push:
     paths-ignore:
-    - '**.md'
+    - 'receiver/**.md'
   pull_request:
     paths-ignore:
-    - '**.md'
+    - 'receiver/**.md'
 
 jobs:
   build:
@@ -28,5 +28,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: coverage
-        path: ./target/site/jacoco
+        path: receiver/target/site/jacoco
         retention-days: 1
