--- a/.github/workflows/main-workflow_receiver.yml
+++ b/.github/workflows/main-workflow_receiver.yml
@@ -1,15 +1,15 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Build Run and Test Receiver
+name: Build Run and Test
 
 on:
   push:
     paths-ignore:
-    - './receiver/**.md'
+    - '**.md'
   pull_request:
     paths-ignore:
-    - './receiver/**.md'
+    - '**.md'
 
 jobs:
   build:
@@ -23,12 +23,10 @@ jobs:
       with:
         java-version: 1.8
     - name: Build and Generate coverage
-      with:
-        path: ./receiver/
-        run: mvn test jacoco:report
+      run: mvn test jacoco:report
     - name: Upload coverage
       uses: actions/upload-artifact@v2
       with:
         name: coverage
-        path: ./receiver/target/site/jacoco
+        path: ./target/site/jacoco
         retention-days: 1
