--- a/.github/workflows/main-workflow_receiver.yml
+++ b/.github/workflows/main-workflow_receiver.yml
@@ -23,7 +23,8 @@ jobs:
       with:
         java-version: 1.8
     - name: Build and Generate coverage
-      path: ./receiver/
+      with:
+        path: ./receiver/
       run: mvn test jacoco:report
     - name: Upload coverage
       uses: actions/upload-artifact@v2
