--- a/.github/workflows/main-workflow_receiver.yml
+++ b/.github/workflows/main-workflow_receiver.yml
@@ -23,6 +23,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build and Generate coverage
+      uses: actions/setup-java@v1
       with:
         path: ./receiver/
       run: mvn test jacoco:report
