--- a/.github/workflows/main-workflow_receiver.yml
+++ b/.github/workflows/main-workflow_receiver.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Build Run and Test
+name: Build Run and Test Receiver
 
 on:
   push:
@@ -23,9 +23,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Build and Generate coverage
-      uses: actions/setup-java@v1
-      with:
-        path: ./receiver/
       run: mvn test jacoco:report
     - name: Upload coverage
       uses: actions/upload-artifact@v2
