updated jacoco location

--- a/.github/workflows/main-workflow_receiver.yml
+++ b/.github/workflows/main-workflow_receiver.yml
@@ -28,5 +28,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: coverage
-        path: ./receiver/target/site/jacoco
+        path: receiver/target/site/jacoco
         retention-days: 1
